[gd_scene load_steps=8 format=2]

[ext_resource path="res://app/load_schema.gd" type="Script" id=1]
[ext_resource path="res://app/load_plan.gd" type="Script" id=2]
[ext_resource path="res://app/error_window.gd" type="Script" id=3]
[ext_resource path="res://app/popup_menu_signal.gd" type="Script" id=5]
[ext_resource path="res://app/tab_container.gd" type="Script" id=6]
[ext_resource path="res://app/tree.gd" type="Script" id=7]
[ext_resource path="res://app/plan_node/plan_node.tscn" type="PackedScene" id=8]

[node name="App" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftPane" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 182.0
margin_bottom = 586.0

[node name="PlanNode" parent="HSplitContainer/LeftPane" instance=ExtResource( 8 )]
margin_right = 182.0
margin_bottom = 182.0

[node name="Tree" type="Tree" parent="HSplitContainer/LeftPane" groups=["update_plan_tree"]]
margin_top = 186.0
margin_right = 182.0
margin_bottom = 586.0
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="TabContainer" type="TabContainer" parent="HSplitContainer"]
margin_left = 194.0
margin_right = 1010.0
margin_bottom = 586.0
tab_align = 0
script = ExtResource( 6 )

[node name="Schema" type="ConfirmationDialog" parent="."]
margin_left = 304.0
margin_top = 178.0
margin_right = 720.0
margin_bottom = 422.0
size_flags_horizontal = 4
size_flags_vertical = 4
window_title = "Schema"
resizable = true
dialog_hide_on_ok = false
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="Schema"]
margin_left = 8.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 308.0
rect_min_size = Vector2( 400, 300 )
text = "Paste Schema ..."

[node name="PlanTree" type="ConfirmationDialog" parent="."]
margin_left = 304.0
margin_top = 178.0
margin_right = 720.0
margin_bottom = 422.0
size_flags_horizontal = 4
size_flags_vertical = 4
window_title = "Plan Tree"
resizable = true
dialog_hide_on_ok = false
script = ExtResource( 2 )

[node name="TextEdit" type="TextEdit" parent="PlanTree"]
margin_left = 8.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 308.0
rect_min_size = Vector2( 400, 300 )

[node name="ErrorWindow" type="AcceptDialog" parent="." groups=["error_msg"]]
margin_left = 473.0
margin_top = 271.0
margin_right = 551.0
margin_bottom = 329.0
size_flags_horizontal = 4
size_flags_vertical = 4
window_title = "Error"
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 892.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseTabButton" type="Button" parent="HBoxContainer"]
margin_right = 73.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Close Tab"
flat = true

[node name="MenuButton" type="MenuButton" parent="HBoxContainer"]
margin_left = 77.0
margin_right = 125.0
margin_bottom = 20.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Menu"
items = [ "Schema", null, 0, false, false, 0, 0, null, "", false, "Plan Tree", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 5 )

[connection signal="item_activated" from="HSplitContainer/LeftPane/Tree" to="HSplitContainer/LeftPane/Tree" method="_item_activated"]
[connection signal="open_plan" from="HSplitContainer/LeftPane/Tree" to="HSplitContainer/LeftPane/PlanNode" method="update_plan"]
[connection signal="open_plan" from="HSplitContainer/LeftPane/Tree" to="HSplitContainer/TabContainer" method="_on_Tree_open_plan"]
[connection signal="confirmed" from="Schema" to="Schema" method="_confirmed"]
[connection signal="confirmed" from="PlanTree" to="PlanTree" method="_confirmed"]
[connection signal="pressed" from="HBoxContainer/CloseTabButton" to="HSplitContainer/TabContainer" method="_on_CloseTabButton_pressed"]
[connection signal="id_pressed" from="HBoxContainer/MenuButton" to="Schema" method="_on_MenuButton_id_pressed"]
[connection signal="id_pressed" from="HBoxContainer/MenuButton" to="PlanTree" method="_on_MenuButton_id_pressed"]
